--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/buble.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
 </head>
 <style>
   a{
@@ -62,7 +62,7 @@
     auto2top: true,
     coverpage: ['/', '/zh-cn/'],
     // homepage: 'getting-started.md',
-    name: 'vue-element-admin-itheima',
+    name: '黑马Admin',
     repo: 'https://github.com/itheima2017/vue-element-admin-itheima',
     search: {
       noData: {
