--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>黑马Admin - 帮助手册</title>
   <link rel="shortcut icon" href="./favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="./assets/theme-buble.css">
 </head>
 <style>
   a{
@@ -41,6 +41,7 @@
     maxLevel: 10,
     auto2top: true,
     coverpage: ['/'],
+    themeColor: '#3F51B5',
     // homepage: 'getting-started.md',
     name: '黑马Admin',
     repo: 'https://github.com/itheima2017/vue-element-admin-itheima',
@@ -55,8 +56,8 @@
     }
   }
 </script>
-<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-<script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
-<script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
-<script src="//unpkg.com/docsify/lib/plugins/emoji.min.js"></script>
+<script src="./assets/docsify.min.js"></script>
+<script src="./assets/search.js"></script>
+<script src="./assets/zoom-image.js"></script>
+<script src="./assets/emoji.min.js"></script>
 </html>
