--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="./assets/theme-buble.css">
+  <link rel="stylesheet" href="./assets/theme-vue.css">
 </head>
 <style>
   a{
@@ -60,4 +60,6 @@
 <script src="./assets/search.js"></script>
 <script src="./assets/zoom-image.js"></script>
 <script src="./assets/emoji.min.js"></script>
+<script src="./assets/prism-bash.js"></script>
+<script src="./assets/prism-java.js"></script>
 </html>
